k3s/resources/my-keycloak-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-keycloak-postgres
spec:
  replicas: 1
  revisionHistoryLimit: 0  # Set to 0 to keep no old ReplicaSets
  selector:
    matchLabels:
      app: my-keycloak-postgres
  template:
    metadata:
      labels:
        app: my-keycloak-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      volumes:
      - name: postgres-data
        hostPath:
          path: /mnt/mydata/keycloaks/my/keycloak-postgres
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: my-keycloak-postgres
spec:
  selector:
    app: my-keycloak-postgres
  ports:
  - port: 5432
    targetPort: 5432
