k3s/resources/my-keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-keycloak
spec:
  replicas: 1
  revisionHistoryLimit: 0  # Set to 0 to keep no old ReplicaSets
  selector:
    matchLabels:
      app: my-keycloak
  template:
    metadata:
      labels:
        app: my-keycloak
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node
      containers:
        - name: my-keycloak
          image: quay.io/keycloak/keycloak:25.0.6
          args: ["start"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
      # Add a dependency on the my-keycloak-postgres deployment
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: my-keycloak-postgres
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always  # Ensure the container always restarts on failure

---
apiVersion: v1
kind: Service
metadata:
  name: my-keycloak
  namespace: default
spec:
  selector:
    app: my-keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: https
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-keycloak-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/ssl-cert: "reinhardjs-my-id-tls-secret" # Reference the secret
    traefik.ingress.kubernetes.io/ssl-redirect: "true" # Enforce HTTPS
spec:
  rules:
  - host: keycloak.reinhardjs.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-keycloak
            port:
              number: 8080
  tls:
  - hosts:
    - keycloak.reinhardjs.my.id
    secretName: reinhardjs-my-id-tls-secret
