k3s/resources/my-web-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-api
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 0  # Set to 0 to keep no old ReplicaSets
  selector:
    matchLabels:
      app: my-web-api
  template:
    metadata:
      labels:
        app: my-web-api
    spec:
      restartPolicy: Always  # Ensure the container always restarts, even on image pull backoff
      nodeSelector:
        kubernetes.io/hostname: master-node  # Specify your node name here
      imagePullSecrets:
      - name: my-regcred  # Reference to the secret containing Docker credentials
      containers:
      - name: my-web-api
        image: registry.reinhardjs.my.id/my-web-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: my-web-api
  namespace: default  # Adjust namespace if needed
spec:
  selector:
    app: my-web-api  # This should match the label on the Deployment pod
  ports:
    - protocol: TCP
      port: 8080  # The port the service exposes to other services or ingress
      targetPort: 8080  # The port the application listens on inside the container
  type: NodePort  # Exposes the service on a static port on each node in the cluster

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-api-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/ssl-cert: "reinhardjs-my-id-tls-secret" # Reference the secret
    traefik.ingress.kubernetes.io/ssl-redirect: "true" # Enforce HTTPS
spec:
  rules:
  - host: api.reinhardjs.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-web-api
            port:
              number: 8080
  tls:
  - hosts:
    - api.reinhardjs.my.id
    secretName: reinhardjs-my-id-tls-secret
